--- a/index.html
+++ b/index.html
@@ -77,6 +77,19 @@
               <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="12"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="13"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="14"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="15"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="16"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="17"></li>
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -90,6 +103,48 @@
               </div>
               <div class="carousel-item">
                 <div class="imagem_slides" style="background-image: url('imagens/slides/4.png');"></div>
+              </div>
+              <div class="carousel-item">
+                <div class="imagem_slides" style="background-image: url('imagens/slides/5.JPG');"></div>
+              </div>
+              <div class="carousel-item">
+                <div class="imagem_slides" style="background-image: url('imagens/slides/6.jpg');"></div>
+              </div>
+              <div class="carousel-item">
+                <div class="imagem_slides" style="background-image: url('imagens/slides/7.jpg');"></div>
+              </div>
+              <div class="carousel-item">
+                <div class="imagem_slides" style="background-image: url('imagens/slides/8.jpg');"></div>
+              </div>
+              <div class="carousel-item">
+                <div class="imagem_slides" style="background-image: url('imagens/slides/9.jpg');"></div>
+              </div>
+              <div class="carousel-item">
+                <div class="imagem_slides" style="background-image: url('imagens/slides/10.jpg');"></div>
+              </div>
+              <div class="carousel-item">
+                <div class="imagem_slides" style="background-image: url('imagens/slides/11.jpg');"></div>
+              </div>
+              <div class="carousel-item">
+                <div class="imagem_slides" style="background-image: url('imagens/slides/12.jpg');"></div>
+              </div>
+              <div class="carousel-item">
+                <div class="imagem_slides" style="background-image: url('imagens/slides/13.jpg');"></div>
+              </div>
+              <div class="carousel-item">
+                <div class="imagem_slides" style="background-image: url('imagens/slides/14.jpg');"></div>
+              </div>
+              <div class="carousel-item">
+                <div class="imagem_slides" style="background-image: url('imagens/slides/15.jpg');"></div>
+              </div>
+              <div class="carousel-item">
+                <div class="imagem_slides" style="background-image: url('imagens/slides/16.jpg');"></div>
+              </div>
+              <div class="carousel-item">
+                <div class="imagem_slides" style="background-image: url('imagens/slides/17.JPG');"></div>
+              </div>
+              <div class="carousel-item">
+                <div class="imagem_slides" style="background-image: url('imagens/slides/18.jpg');"></div>
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
