melhorias no visual

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="menu">
         <div class="grid-container-menu">
             <div class="grid-item-menu">
-                <label class="item-menu home"onclick="showInicial()">Victória e Rômulo</label>
+                <label class="home"onclick="showInicial()">Victória e Rômulo</label>
                 <br>
                 <audio controls>
                     <source src="musicas/playlist.mp3" type="audio/mpeg">
@@ -61,7 +61,7 @@
             </div>
         </div>
 
-        <h3>
+        <h3 class="text">
             E depois de muita espera e planejamento, nosso casamento está chegando!!
             Criamos esse site para compartilhar com vocês os detalhes da organização do nosso evento. Estamos muito felizes e contamos com a presença de todos no nosso grande dia!
             Aqui vocês encontrarão dicas para hospedagem, salão de beleza e trajeto até o local.
@@ -159,18 +159,25 @@
     </div>
 
     <div id="local">
-        <h1>Estancia Lar</h1>
-        <img>
-        Gostaríamos muito de contar com a presença de todos vocês no momento do nosso sim, uma das partes mais importantes desse grande dia, na qual iremos afirmar nosso amor perante todos que amamos!
-        A cerimônia será rápida e tentaremos ser extremamente pontuais. Em seguida, receberemos todos em uma recepção no mesmo local. Contamos com vocês!
+        <label class="title center">Estancia Lar</label>
+        <div id="rita"></div>
 
-        Dia 30 de Março de 2024, às 16h30.
-
-        Estância Lar
-        R. dos Jasmins, 09
-        Green Valley, Botucatu – SP, 18600-000
-        <h1>Dica para GPS</h1>
-        O melhor trajeto para chegar até o local do evento é utilizando a Rodovia Gastão Dal Farra. Ao colocar o caminho no GPS, verifique se ele indica esse percurso.
+        <label class="text">
+          Gostaríamos muito de contar com a presença de todos vocês no momento do nosso sim, uma das partes mais importantes desse grande dia, na qual iremos afirmar nosso amor perante todos que amamos!
+          A cerimônia será rápida e tentaremos ser extremamente pontuais. Em seguida, receberemos todos em uma recepção no mesmo local. Contamos com vocês!
+          <br><br>
+          Dia 30 de Março de 2024, às 16h30.
+          <br><br>
+          Estância Lar
+          <br>
+          R. dos Jasmins, 09
+          <br>
+          Green Valley, Botucatu – SP, 18600-000
+        </label>
+        <label class="title">Dica para GPS</label>
+        <label class="text">
+          O melhor trajeto para chegar até o local do evento é utilizando a Rodovia Gastão Dal Farra. Ao colocar o caminho no GPS, verifique se ele indica esse percurso.
+        </label>
         <div class="mapouter">
             <div class="gmap_canvas">
                 <iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=658&amp;height=400&amp;hl=en&amp;q=Estancia Lar&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
@@ -189,10 +196,10 @@
     </div>
 
     <div id="indicacao_noivos">
-        <h1>Onde Ficar?</h1>
-        <h3>
+        <label class="title">Onde Ficar?</label>
+        <label class="text">
             Queridos convidados, como sabemos que a maioria vem de outra cidade, separamos aqui algumas sugestões de hotéis para vocês se hospedarem. Todos esses tem uma ótima localização e são bem conhecidos na cidade.
-        </h3>
+        </label>
         <div class="grid-container-indicacao">
             <div class="grid-item-indicacao">
                 <img src="imagens/indicacoes/primar.png">
@@ -226,10 +233,10 @@
             </div>
         </div>
 
-        <h1>Onde se arrumar?</h1>
-        <h3>
+        <label class="title">Onde se arrumar?</label>
+        <label class="text">
             Também separamos algumas sugestões de salão de beleza para quem quiser se arrumar na cidade, sabemos que com a viagem os looks podem desmanchar, então indicamos algumas opções!
-        </h3>
+        </label>
         <div class="grid-container-indicacao">
             <div class="grid-item-indicacao">
                 <img src="imagens/indicacoes/jota.png">
