--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Victória e Rômulo</title>
-    <link href="index.css" rel="stylesheet">
-    <script src="index.js"></script>
-    <link href="imagens/favicon.ico" rel="icon">
-    <script src="jquery.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Victória e Rômulo</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.15.4/css/all.css">
+
+  <link href="index.css" rel="stylesheet">
+  <script src="index.js"></script>
+  <link href="imagens/favicon.ico" rel="icon">
 </head>
 <body>
     <div id="menu">
         <div class="grid-container-menu">
             <div class="grid-item-menu">
                 <label class="home"onclick="showInicial()">Victória e Rômulo</label>
-                <br>
-                <audio controls>
-                    <source src="musicas/playlist.mp3" type="audio/mpeg">
-                </audio>
+                
             </div>
             <div class="grid-item-menu">
                 <label class="item-menu" onclick="showLocal()">Local</label>
                 <label class="item-menu" onclick="showListaPresente()">Lista de presentes</label>
                 <label class="item-menu" onclick="showConfirmacaoPresenca()">Confirmação de presença</label>
                 <label class="item-menu" onclick="showIndicacaoNoivos()">Indicação dos noivos</label>
+            </div>
+            <div class="grid-item-menu">
+              <label onclick="play()"><i class="fas fa-play"></i></label>
+              <label onclick="pause()"><i class="fas fa-pause" style="display: none;"></i></label>
+              <label onclick="mute()"><i class="fas fa-volume-mute" ></i></label>
+              <label onclick="volume()"><i class="fas fa-volume-up" style="display: none;"></i></label>
+              <br>
+              <audio id="player" autoplay>
+                <source src="musicas/playlist.mp3" type="audio/mpeg">
+              </audio>
             </div>
         </div>
     </div>
