--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         <div class="grid-container-menu">
             <div class="grid-item-menu">
                 <label class="home"onclick="showInicial()">Victória e Rômulo</label>
-                
             </div>
             <div class="grid-item-menu">
                 <label class="item-menu" onclick="showLocal()">Local</label>
@@ -34,7 +33,7 @@
               <label onclick="mute()"><i class="fas fa-volume-mute" ></i></label>
               <label onclick="volume()"><i class="fas fa-volume-up" style="display: none;"></i></label>
               <br>
-              <audio id="player" autoplay>
+              <audio id="player" autoplay loop>
                 <source src="musicas/playlist.mp3" type="audio/mpeg">
               </audio>
             </div>
@@ -210,34 +209,40 @@
         </label>
         <div class="grid-container-indicacao">
             <div class="grid-item-indicacao">
-                <img src="imagens/indicacoes/primar.png">
-                <br>
+              <a href="https://primarhotel.com.br/" target="_blank">
+                <div class="img-indicacao" style="background-image: url('imagens/indicacoes/primar.png');"></div>
                 <label>Primar plaza hotel</label>
+              </a>
             </div>
             <div class="grid-item-indicacao">
-                <img src="imagens/indicacoes/ibis.png">
-                <br>
+              <a href="https://all.accor.com/hotel/9506/index.pt-br.shtml?utm_campaign=seo+maps&utm_medium=seo+maps&utm_source=google+Maps" target="_blank">
+                <div class="img-indicacao" style="background-image: url('imagens/indicacoes/ibis.png');"></div>
                 <label>Ibis Botucatu</label>
+              </a>
             </div>
             <div class="grid-item-indicacao">
-                <img src="imagens/indicacoes/excellence.png">
-                <br>
+              <a href="http://www.excellenceplazahotel.com.br/" target="_blank">
+                <div class="img-indicacao" style="background-image: url('imagens/indicacoes/excellence.png');"></div>
                 <label>Excellence Plaza Hotel</label>
+              </a>
             </div>
             <div class="grid-item-indicacao">
-                <img src="imagens/indicacoes/bekassin.png">
-                <br>
+              <a href="http://booking.com/hotel/br/bekassin-botucatu-hoteis-ltda.pt-br.html?aid=1726433&label=bekassin-botucatu-hoteis-ltda-myGFCuy0XHkpd0IPTnU%2A4wS468137848228%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-297601666555%3Akwd-4B8r3B4p7yhRXuBWLqsQ546WR43cqQwrbXMDFnBi6vSJBeif8tPW85a7r7DM961Jvk4hdryZoByEp8GC8HzsqJpRN4FxGM9sid=4B8r3B4p7yhRXuBWLqsQ546WR43cqQwrbXMDFnBi6vSJBeif8tPW85a7r7DM961Jvk4hdryZoByEp8GC8HzsqJpRN4FxGM902;checkout=2023-11-05;dest_id=-631079;dest_type=city;dist=0;group_adults=2;group_children=1;hapos=1;highlighted_blocks=301619909_272297403_3_1_0;hpos=1;matching_block_id=301619909_272297403_3_1_0;no_rooms=1;req_adults=2;req_age=0;req_children=1;room1=A%2CA%2C0;sb_price_type=total;sr_order=popularity;sr_pri_blocks=301619909_272297403_3_1_0__92400;srepoch=1693777523;srpvid=0d3b98f8ff0b0067;type=total;ucfs=1&#hotelTmpl" target="_blank">
+                <div class="img-indicacao" style="background-image: url('imagens/indicacoes/bekassin.png');"></div>
                 <label>Bekassin Botucatu</label>
+              </a>
             </div>
             <div class="grid-item-indicacao">
-                <img src="imagens/indicacoes/riellis.png">
-                <br>
+              <a href="https://www.riellishotel.com.br/" target="_blank">
+                <div class="img-indicacao" style="background-image: url('imagens/indicacoes/riellis.png');"></div>
                 <label>Riellis Center Hotel</label>
+              </a>
             </div>
             <div class="grid-item-indicacao">
-                <img src="imagens/indicacoes/botucatu-hotel.png">
-                <br>
+              <a href="https://hotelbotucatu.com.br/" target="_blank">
+                <div class="img-indicacao" style="background-image: url('imagens/indicacoes/botucatu-hotel.png');"></div>
                 <label>Botucatu hotel</label>
+              </a>
             </div>
         </div>
 
@@ -247,34 +252,40 @@
         </label>
         <div class="grid-container-indicacao">
             <div class="grid-item-indicacao">
-                <img src="imagens/indicacoes/jota.png">
-                <br>
+              <a href="https://www.instagram.com/jotahair/?hl=pt" target="_blank">
+                <div class="img-indicacao" style="background-image: url('imagens/indicacoes/jota.png');"></div>
                 <label>Jota Hair</label>
+              </a>
             </div>
             <div class="grid-item-indicacao">
-                <img src="imagens/indicacoes/sisters.png">
-                <br>
+              <a href="https://www.instagram.com/studiosisters_/" target="_blank">
+                <div class="img-indicacao" style="background-image: url('imagens/indicacoes/sisters.png');"></div>
                 <label>Studio Sisters</label>
+              </a>
             </div>
             <div class="grid-item-indicacao">
-                <img src="imagens/indicacoes/vs.png">
-                <br>
+              <a href="https://www.instagram.com/vs.vaniasantana/" target="_blank">
+                <div class="img-indicacao" style="background-image: url('imagens/indicacoes/vs.png');"></div>
                 <label>VS Vânia Santana</label>
+              </a>
             </div>
             <div class="grid-item-indicacao">
-                <img src="imagens/indicacoes/studio7.png">
-                <br>
+              <a href="https://www.instagram.com/studio7makehair/" target="_blank">
+                <div class="img-indicacao" style="background-image: url('imagens/indicacoes/studio7.png');"></div>
                 <label>Studio 7</label>
+              </a>
             </div>
             <div class="grid-item-indicacao">
-                <img src="imagens/indicacoes/monique.png">
-                <br>
+              <a href="https://instagram.com/monique_villasboas?igshid=MzRlODBiNWFlZA" target="_blank">
+                <div class="img-indicacao" style="background-image: url('imagens/indicacoes/monique.png');"></div>
                 <label>Studio Monique Fioretto</label>
+              </a>
             </div>
             <div class="grid-item-indicacao">
-                <img src="imagens/indicacoes/alsofer.png">
-                <br>
+              <a href="https://www.instagram.com/alsoferbotucatu/" target="_blank">
+                <div class="img-indicacao" style="background-image: url('imagens/indicacoes/alsofer.png');"></div>
                 <label>Alsofer Hair Studio</label>
+              </a>
             </div>
         </div>
     </div>
