--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
                 <label class="home"onclick="showInicial()">Victória e Rômulo</label>
             </div>
             <div class="grid-item-menu">
-                <label class="item-menu" onclick="showLocal()">Local</label>
-                <label class="item-menu" onclick="showListaPresente()">Lista de presentes</label>
-                <label class="item-menu" onclick="showConfirmacaoPresenca()">Confirmação de presença</label>
-                <label class="item-menu" onclick="showIndicacaoNoivos()">Indicação dos noivos</label>
+              <label class="item-menu" onclick="showLocal()">Local</label>
+            </div>
+            <div class="grid-item-menu">
+              <label class="item-menu" onclick="showIndicacaoNoivos()">Indicação dos noivos</label>
+            </div>
+            <div class="grid-item-menu">
+              <label class="item-menu" onclick="showConfirmacaoPresenca()">Confirmação de presença</label>
+            </div>
+            <div class="grid-item-menu">
+              <label class="item-menu" onclick="showListaPresente()">Lista de presentes</label>
             </div>
             <div class="grid-item-menu">
               <label onclick="play()"><i class="fas fa-play"></i></label>
@@ -70,10 +76,15 @@
 
         <h3 class="text">
             E depois de muita espera e planejamento, nosso casamento está chegando!!
+            <br><br>
             Criamos esse site para compartilhar com vocês os detalhes da organização do nosso evento. Estamos muito felizes e contamos com a presença de todos no nosso grande dia!
+            <br><br>
             Aqui vocês encontrarão dicas para hospedagem, salão de beleza e trajeto até o local.
+            <br><br>
             Ah, é importante também confirmar sua presença. Para isto contamos com sua ajuda clicando no menu “Confirmação de presença” e preenchendo os dados necessários.
+            <br><br>
             Se estiver na dúvida do que nos dar de presente, separamos algumas opções na “Lista de presentes”, você pode selecionar quantos itens o seu coração mandar e até mesmo finalizar o pagamento aqui pelo site. Fiquem à vontade!
+            <br><br>
             Aguardamos vocês no nosso grande dia!
         </h3>
 
@@ -166,7 +177,7 @@
     </div>
 
     <div id="local">
-        <label class="title center">Estancia Lar</label>
+        <label class="title center" style="font-size: 40px;">Estancia Lar</label>
         <div id="rita"></div>
 
         <label class="text">
