--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         
     <div id="lista_presentes">
         <div class="iframe">
-            <iframe class="iframe" frameborder="0" src="http://localhost/lista_de_presentes/loja"></iframe>
+            <iframe class="iframe" frameborder="0" src="https://victoriaeromulo.hubis.com.br/lista-de-presentes/loja"></iframe>
         </div>
     </div>
     
