upload fotos pre wedding

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
     <div id="inicio">
         <div class="img_inicial">
-            <img id="casal" src="imagens/casal.png">
+            <img id="casal" src="imagens/home2.png">
         </div>
 
         <div class="grid-container-timer">
@@ -178,7 +178,9 @@
 
     <div id="local">
         <label class="title center" style="font-size: 40px;">Estancia Lar</label>
-        <div id="rita"></div>
+        <div class="img_inicial">
+          <img id="rita" src="imagens/rita.png">
+        </div>
 
         <label class="text">
           Gostaríamos muito de contar com a presença de todos vocês no momento do nosso sim, uma das partes mais importantes desse grande dia, na qual iremos afirmar nosso amor perante todos que amamos!
