--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
               <label class="item-menu" onclick="showListaPresente()">Lista de presentes</label>
             </div>
             <div class="grid-item-menu">
-              <label onclick="play()"><i class="fas fa-play"></i></label>
-              <label onclick="pause()"><i class="fas fa-pause" style="display: none;"></i></label>
+              <label onclick="play()"><i class="fas fa-play" style="display: none;"></i></label>
+              <label onclick="pause()"><i class="fas fa-pause"></i></label>
               <label onclick="mute()"><i class="fas fa-volume-mute" ></i></label>
               <label onclick="volume()"><i class="fas fa-volume-up" style="display: none;"></i></label>
               <br>
