--- a/padrinhos/index.html
+++ b/padrinhos/index.html
@@ -11,13 +11,17 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.15.4/css/all.css">
 
+  <link href="../index.css" rel="stylesheet">
   <link href="index.css" rel="stylesheet">
-  <link href="padrinhos.css" rel="stylesheet">
   <link href="imagens/favicon.ico" rel="icon">
 </head>
 <body>
-    <div class="title">ALGOOOO</div>
-    <div class="text">Dia 30.03.2024 daremos um passo muito importante nas nossas vidas e como vocês sempre estiveram presentes na nossa história, desde o princípio, queremos muito ter vocês ao nosso lado. Vocês são peças centrais nas nossas vidas e não poderíamos dizer o nosso sim sem ter vocês com a gente nesse momento.
+    <div class="top">
+      <img class="img-top" src="imagens/iniciopeq.png">
+    </div>
+    <br>
+    <div class="text">
+      Dia 30.03.2024 daremos um passo muito importante nas nossas vidas e como vocês sempre estiveram presentes na nossa história, desde o princípio, queremos muito ter vocês ao nosso lado. Vocês são peças centrais nas nossas vidas e não poderíamos dizer o nosso sim sem ter vocês com a gente nesse momento.
     </div>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -73,13 +77,23 @@
           <span class="sr-only">Next</span>
         </a>
     </div>
-    <div class="text">Nós não temos palavras para descrever o que sentimos por vocês e só podemos gradecer por todos os ensinamentos e por torcerem pelo nosso amor.  Ter vocês ao nosso lado, no altar, tornará esse dia ainda mais emocionante, por isso...
+    <div class="text">
+      Nós não temos palavras para descrever o que sentimos por vocês e só podemos gradecer por todos os ensinamentos e por torcerem pelo nosso amor.  Ter vocês ao nosso lado, no altar, tornará esse dia ainda mais emocionante, por isso...
     </div>
-    <div class="title">ACEITAM SER NOSSOS PADRINHOS?</div>
-    <div class="text">Infelizmente vocês não têm muita escolha, ninguém mandou serem nossos irmãos mais velhos, então contando que vocês ja aceitaram, colocamos aqui algumas dicas pra esse grande dia:
+    <div class="title">
+      ACEITAM SER NOSSOS PADRINHOS?
     </div>
-    <div class="title">Queridas madrinhas</div>
-    <div class="text">O principal é que vocês estejam confortáveis! Nosso casamento será em março e ao ar livre, então aconselhamos que vocês escolham um vestido leve e sapatos com salto baixo e sem ser fino. Quanto as cores, escolhemos uma paleta em tons de verde, aqui estão algumas sugestões para vocês seguirem.
+    <div class="text">
+      Infelizmente vocês não têm muita escolha, ninguém mandou serem nossos irmãos mais velhos, então contando que vocês ja aceitaram, colocamos aqui algumas dicas pra esse grande dia:
+    </div>
+    <br>
+    <div class="title">
+      <img class="img-title" src="imagens/floresq.png">
+      Queridas madrinhas
+      <img class="img-title" src="imagens/flordir.png">
+    </div>
+    <div class="text">
+      O principal é que vocês estejam confortáveis! Nosso casamento será em março e ao ar livre, então aconselhamos que vocês escolham um vestido leve e sapatos com salto baixo e sem ser fino. Quanto as cores, escolhemos uma paleta em tons de verde, aqui estão algumas sugestões para vocês seguirem.
     </div>
     <div class="grid-container">
       <div class="grid-item" style="background-image: url('imagens/cores/v1.png');"></div>
@@ -89,17 +103,37 @@
       <div class="grid-item" style="background-image: url('imagens/cores/v5.png');"></div>
       <div class="grid-item" style="background-image: url('imagens/cores/v6.png');"></div>
     </div>
-    <div class="text">Para completar seu look e ficarem ainda mais lindas, não esqueçam de colocar a pulseira que demos de presente!</div>
-    <div class="title">Queridas padrinhos</div>
-    <div class="text">Com vocês não será diferente, presando pelo conforto escolhemos como opção de vestimenta uma camisa branca e uma calça social bege, seguindo essa palheta:</div>
-    <div class="grid-container">
+    <div class="text">
+      Para completar seu look e ficarem ainda mais lindas, não esqueçam de colocar a pulseira que demos de presente!
+      <img class="fig-padrinhos1" src="imagens/presentepeq.png">
+    </div>
+    <br>
+    <div class="title">
+      <img class="img-title" src="imagens/floresq.png">
+      Queridas padrinhos
+      <img class="img-title" src="imagens/flordir.png">
+    </div>
+    <div class="text">
+      Com vocês não será diferente, presando pelo conforto escolhemos como opção de vestimenta uma camisa branca e uma calça social bege, seguindo essa palheta:
+    </div>
+    <div class="grid-container2">
       <div class="grid-item" style="background-image: url('imagens/cores/b1.png');"></div>
       <div class="grid-item" style="background-image: url('imagens/cores/b2.png');"></div>
       <div class="grid-item" style="background-image: url('imagens/cores/b3.png');"></div>
     </div>
-    <div class="text">Lembrando que não será permitido o uso de camisa de time por baixo (eu tentei galera, ass: Rômulo) e que a lapela de vocês será o lindo pin que vocês receberam. Esse pin será colocado no bolso da camisa, ja que vocês não usarão blazer.</div>
+    <div class="text">
+      Lembrando que não será permitido o uso de camisa de time por baixo (eu tentei galera, ass: Rômulo) e que a lapela de vocês será o lindo pin que vocês receberam. Esse pin será colocado no bolso da camisa, ja que vocês não usarão blazer.
+      <img class="fig-padrinhos2" src="imagens/florgrand.png">
+    </div>
+    <br>
+    <div class="title">
+      Com amor, Rômulo e Victória
+      <div class="top">
+        <img class="img-top" src="imagens/casal.jpg">
+      </div>
+    </div>
 </body>
 <footer>
-  <img src="imagens/cropped-V-R.png">
+  <img src="../imagens/cropped-V-R.png">
 </footer>
 </html>
