--- a/padrinhos/index.html
+++ b/padrinhos/index.html
@@ -13,7 +13,7 @@
 
   <link href="../index.css" rel="stylesheet">
   <link href="index.css" rel="stylesheet">
-  <link href="imagens/favicon.ico" rel="icon">
+  <link href="../imagens/favicon.ico" rel="icon">
 </head>
 <body>
     <div class="top">
@@ -105,6 +105,7 @@
     </div>
     <div class="text">
       Para completar seu look e ficarem ainda mais lindas, não esqueçam de colocar a pulseira que demos de presente!
+      <br>
       <img class="fig-padrinhos1" src="imagens/presentepeq.png">
     </div>
     <br>
@@ -123,6 +124,7 @@
     </div>
     <div class="text">
       Lembrando que não será permitido o uso de camisa de time por baixo (eu tentei galera, ass: Rômulo) e que a lapela de vocês será o lindo pin que vocês receberam. Esse pin será colocado no bolso da camisa, ja que vocês não usarão blazer.
+      <br>
       <img class="fig-padrinhos2" src="imagens/florgrand.png">
     </div>
     <br>
