--- a/padrinhos/index.html
+++ b/padrinhos/index.html
@@ -50,7 +50,7 @@
             <div class="imagem_slides" style="background-image: url('imagens/padrinhos/4.jpg');"></div>
           </div>
           <div class="carousel-item">
-            <div class="imagem_slides" style="background-image: url('imagens/padrinhos/5.JPG');"></div>
+            <div class="imagem_slides" style="background-image: url('imagens/padrinhos/5.jpg');"></div>
           </div>
           <div class="carousel-item">
             <div class="imagem_slides" style="background-image: url('imagens/padrinhos/6.jpg');"></div>
