fix padrinhos e player

--- a/padrinhos/index.html
+++ b/padrinhos/index.html
@@ -6,9 +6,6 @@
   <title>Victória e Rômulo</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.15.4/css/all.css">
 
   <link href="../index.css" rel="stylesheet">
@@ -16,125 +13,152 @@
   <link href="../imagens/favicon.ico" rel="icon">
 </head>
 <body>
-    <div class="top">
-      <img class="img-top" src="imagens/iniciopeq.png">
-    </div>
-    <br>
-    <div class="text">
-      Dia 30.03.2024 daremos um passo muito importante nas nossas vidas e como vocês sempre estiveram presentes na nossa história, desde o princípio, queremos muito ter vocês ao nosso lado. Vocês são peças centrais nas nossas vidas e não poderíamos dizer o nosso sim sem ter vocês com a gente nesse momento.
-    </div>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="imagem_slides" style="background-image: url('imagens/padrinhos/1.jpg');"></div>
-          </div>
-          <div class="carousel-item">
-            <div class="imagem_slides" style="background-image: url('imagens/padrinhos/2.jpg');"></div>
-          </div>
-          <div class="carousel-item">
-            <div class="imagem_slides" style="background-image: url('imagens/padrinhos/3.jpg');"></div>
-          </div>
-          <div class="carousel-item">
-            <div class="imagem_slides" style="background-image: url('imagens/padrinhos/4.jpg');"></div>
-          </div>
-          <div class="carousel-item">
-            <div class="imagem_slides" style="background-image: url('imagens/padrinhos/5.jpg');"></div>
-          </div>
-          <div class="carousel-item">
-            <div class="imagem_slides" style="background-image: url('imagens/padrinhos/6.jpg');"></div>
-          </div>
-          <div class="carousel-item">
-            <div class="imagem_slides" style="background-image: url('imagens/padrinhos/7.jpg');"></div>
-          </div>
-          <div class="carousel-item">
-            <div class="imagem_slides" style="background-image: url('imagens/padrinhos/8.jpg');"></div>
-          </div>
-          <div class="carousel-item">
-            <div class="imagem_slides" style="background-image: url('imagens/padrinhos/9.jpg');"></div>
-          </div>
-          <div class="carousel-item">
-            <div class="imagem_slides" style="background-image: url('imagens/padrinhos/10.jpg');"></div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-    </div>
-    <div class="text">
-      Nós não temos palavras para descrever o que sentimos por vocês e só podemos gradecer por todos os ensinamentos e por torcerem pelo nosso amor.  Ter vocês ao nosso lado, no altar, tornará esse dia ainda mais emocionante, por isso...
-    </div>
-    <div class="title">
-      ACEITAM SER NOSSOS PADRINHOS?
-    </div>
-    <div class="text">
-      Infelizmente vocês não têm muita escolha, ninguém mandou serem nossos irmãos mais velhos, então contando que vocês ja aceitaram, colocamos aqui algumas dicas pra esse grande dia:
-    </div>
-    <br>
-    <div class="title">
-      <img class="img-title" src="imagens/floresq.png">
-      Queridas madrinhas
-      <img class="img-title" src="imagens/flordir.png">
-    </div>
-    <div class="text">
-      O principal é que vocês estejam confortáveis! Nosso casamento será em março e ao ar livre, então aconselhamos que vocês escolham um vestido leve e sapatos com salto baixo e sem ser fino. Quanto as cores, escolhemos uma paleta em tons de verde, aqui estão algumas sugestões para vocês seguirem.
-    </div>
-    <div class="grid-container">
-      <div class="grid-item" style="background-image: url('imagens/cores/v1.png');"></div>
-      <div class="grid-item" style="background-image: url('imagens/cores/v2.png');"></div>
-      <div class="grid-item" style="background-image: url('imagens/cores/v3.png');"></div>
-      <div class="grid-item" style="background-image: url('imagens/cores/v4.png');"></div>
-      <div class="grid-item" style="background-image: url('imagens/cores/v5.png');"></div>
-      <div class="grid-item" style="background-image: url('imagens/cores/v6.png');"></div>
-    </div>
-    <div class="text">
-      Para completar seu look e ficarem ainda mais lindas, não esqueçam de colocar a pulseira que demos de presente!
+    <div id="aceitar">
+      <label class="text">Estão prontos para futuras escolhas e mensagens fofinhas ?</label>
       <br>
-      <img class="fig-padrinhos1" src="imagens/presentepeq.png">
-    </div>
-    <br>
-    <div class="title">
-      <img class="img-title" src="imagens/floresq.png">
-      Queridas padrinhos
-      <img class="img-title" src="imagens/flordir.png">
-    </div>
-    <div class="text">
-      Com vocês não será diferente, presando pelo conforto escolhemos como opção de vestimenta uma camisa branca e uma calça social bege, seguindo essa palheta:
-    </div>
-    <div class="grid-container2">
-      <div class="grid-item" style="background-image: url('imagens/cores/b1.png');"></div>
-      <div class="grid-item" style="background-image: url('imagens/cores/b2.png');"></div>
-      <div class="grid-item" style="background-image: url('imagens/cores/b3.png');"></div>
-    </div>
-    <div class="text">
-      Lembrando que não será permitido o uso de camisa de time por baixo (eu tentei galera, ass: Rômulo) e que a lapela de vocês será o lindo pin que vocês receberam. Esse pin será colocado no bolso da camisa, ja que vocês não usarão blazer.
+      <label class="title" onclick="aceitar()"><u>sim</u></lebel>
       <br>
-      <img class="fig-padrinhos2" src="imagens/florgrand.png">
+      <label class="text">ou</lebel>
+      <br>
+      <label class="title" onclick="aceitar()"><u>sim</u></lebel>
     </div>
-    <br>
-    <div class="title">
-      Com amor, Rômulo e Victória
+    <div id="content">
       <div class="top">
-        <img class="img-top" src="imagens/casal.jpg">
+        <img class="img-top" src="imagens/iniciopeq.png">
+        <div class="grid-item-menu">
+          <label onclick="play()"><i class="fas fa-play" style="display: none;"></i></label>
+          <label onclick="pause()"><i class="fas fa-pause"></i></label>
+          <label onclick="mute()"><i class="fas fa-volume-up"></i></label>
+          <label onclick="volume()"><i class="fas fa-volume-mute" style="display: none;"></i></label>
+          <br>
+          <audio id="player" loop>
+            <source src="musica/emicida.mp3" type="audio/mpeg">
+          </audio>
+        </div>
+      </div>
+      <br>
+      <div class="text">
+        Dia 30.03.2024 daremos um passo muito importante nas nossas vidas e como vocês sempre estiveram presentes na nossa história, desde o princípio, queremos muito ter vocês ao nosso lado. Vocês são peças centrais nas nossas vidas e não poderíamos dizer o nosso sim sem ter vocês com a gente nesse momento.
+      </div>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="imagem_slides" style="background-image: url('imagens/padrinhos/1.jpg');"></div>
+            </div>
+            <div class="carousel-item">
+              <div class="imagem_slides" style="background-image: url('imagens/padrinhos/2.jpg');"></div>
+            </div>
+            <div class="carousel-item">
+              <div class="imagem_slides" style="background-image: url('imagens/padrinhos/3.jpg');"></div>
+            </div>
+            <div class="carousel-item">
+              <div class="imagem_slides" style="background-image: url('imagens/padrinhos/4.jpg');"></div>
+            </div>
+            <div class="carousel-item">
+              <div class="imagem_slides" style="background-image: url('imagens/padrinhos/5.jpg');"></div>
+            </div>
+            <div class="carousel-item">
+              <div class="imagem_slides" style="background-image: url('imagens/padrinhos/6.jpg');"></div>
+            </div>
+            <div class="carousel-item">
+              <div class="imagem_slides" style="background-image: url('imagens/padrinhos/7.jpg');"></div>
+            </div>
+            <div class="carousel-item">
+              <div class="imagem_slides" style="background-image: url('imagens/padrinhos/8.jpg');"></div>
+            </div>
+            <div class="carousel-item">
+              <div class="imagem_slides" style="background-image: url('imagens/padrinhos/9.jpg');"></div>
+            </div>
+            <div class="carousel-item">
+              <div class="imagem_slides" style="background-image: url('imagens/padrinhos/10.jpg');"></div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+      </div>
+      <div class="text">
+        Nós não temos palavras para descrever o que sentimos por vocês e só podemos gradecer por todos os ensinamentos e por torcerem pelo nosso amor.  Ter vocês ao nosso lado, no altar, tornará esse dia ainda mais emocionante, por isso...
+      </div>
+      <div class="title">
+        ACEITAM SER NOSSOS PADRINHOS?
+      </div>
+      <div class="text">
+        Infelizmente vocês não têm muita escolha, ninguém mandou serem nossos irmãos mais velhos, então contando que vocês ja aceitaram, colocamos aqui algumas dicas pra esse grande dia:
+      </div>
+      <br>
+      <div class="title">
+        <img class="img-title" src="imagens/floresq.png">
+        Queridas madrinhas
+        <img class="img-title" src="imagens/flordir.png">
+      </div>
+      <div class="text">
+        O principal é que vocês estejam confortáveis! Nosso casamento será em março e ao ar livre, então aconselhamos que vocês escolham um vestido leve e sapatos com salto baixo e sem ser fino. Quanto as cores, escolhemos uma paleta em tons de verde, aqui estão algumas sugestões para vocês seguirem.
+      </div>
+      <div class="grid-container">
+        <div class="grid-item" style="background-image: url('imagens/cores/v1.png');"></div>
+        <div class="grid-item" style="background-image: url('imagens/cores/v2.png');"></div>
+        <div class="grid-item" style="background-image: url('imagens/cores/v3.png');"></div>
+        <div class="grid-item" style="background-image: url('imagens/cores/v4.png');"></div>
+        <div class="grid-item" style="background-image: url('imagens/cores/v5.png');"></div>
+        <div class="grid-item" style="background-image: url('imagens/cores/v6.png');"></div>
+      </div>
+      <div class="text">
+        Para completar seu look e ficarem ainda mais lindas, não esqueçam de colocar a pulseira que demos de presente!
+        <br>
+        <img class="fig-padrinhos1" src="imagens/presentepeq.png">
+      </div>
+      <br>
+      <div class="title">
+        <img class="img-title" src="imagens/floresq.png">
+        Queridas padrinhos
+        <img class="img-title" src="imagens/flordir.png">
+      </div>
+      <div class="text">
+        Com vocês não será diferente, presando pelo conforto escolhemos como opção de vestimenta uma camisa branca e uma calça social bege, seguindo essa palheta:
+      </div>
+      <div class="grid-container2">
+        <div class="grid-item" style="background-image: url('imagens/cores/b1.png');"></div>
+        <div class="grid-item" style="background-image: url('imagens/cores/b2.png');"></div>
+        <div class="grid-item" style="background-image: url('imagens/cores/b3.png');"></div>
+      </div>
+      <div class="text">
+        Lembrando que não será permitido o uso de camisa de time por baixo (eu tentei galera, ass: Rômulo) e que a lapela de vocês será o lindo pin que vocês receberam. Esse pin será colocado no bolso da camisa, ja que vocês não usarão blazer.
+        <br>
+        <img class="fig-padrinhos2" src="imagens/florgrand.png">
+      </div>
+      <br>
+      <div class="title">
+        Com amor, Rômulo e Victória
+        <div class="top">
+          <img class="img-top" src="imagens/casal.jpg">
+        </div>
       </div>
     </div>
 </body>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<script src="index.js"></script>
 <footer>
   <img src="../imagens/cropped-V-R.png">
 </footer>
